# GEM_claude

./: .gitignore  CMakeLists.txt  al1_meson.wl  physics.md  readme.md
apps/: main.cpp  test_charmed.cpp  test_charmonium.cpp
include/gem/basis/: gaussian_basis.hpp  jacobi_coordinates.hpp
include/gem/core/: config.hpp  constants.hpp  types.hpp
include/gem/hadrons/: baryon.hpp  meson.hpp
include/gem/matrix/: hamiltonian.hpp
include/gem/potential/: potentials.hpp
include/gem/quantum/: gell_mann.hpp  spin_operators.hpp  wave_function.hpp
include/gem/solver/: eigenvalue_solver.hpp
src/basis/: gaussian_basis.cpp  jacobi_coordinates.cpp
src/hadrons/: baryon.cpp  meson.cpp
src/matrix/: hamiltonian.cpp
src/potential/: potentials.cpp
src/quantum/: gell_mann.cpp  spin_operators.cpp  wave_function.cpp
src/solver/: eigenvalue_solver.cpp
